git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@945 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -150,559 +150,6 @@ fr-FR:
         even: "must be even"
         # Append your own errors here or at the model/attributes scope.
 
-    models:
-      # Overrides default messages
-      account: Compte
-      bank_account: Compte bancaire
-      bank_account_statement: Relevé de compte bancaire
-      company: Société
-      contact: Contact
-      department: Service
-      employee: Employé
-      entity: Relation
-      entry: Écriture
-      establishment: Établissement
-      journal: Journal
-      financialyear: Exercice
-      price_list: Liste de prix
-      product: Produit
-      profession: Profession
-      purchase_order: Achat
-      sequence: Séquence
-      shape: Îlot
-      shape_operation: Traitement
-      shape_operation_nature: Type de Traitement
-      shelf: Catégorie de produit
-      stock_location: Lieu de stockage
-      stock_move: Mouvement de stock
-      stock_transfer: Transfert ou perte de Stock
-      user: Utilisateur
-
-    attributes:
-      # Overrides model and default messages.
-      account:
-        number: Numéro
-        name: Intitulé
-        label: Label
-      bank_account:
-        address: Adresse
-        bank_name: Nom de la banque
-        name: Intitulé
-        bank_code: Code banque
-        agency_code: Code guichet 
-        country_code: Code pays
-        number: Numéro de compte bancaire
-        key: Clé RIB
-        mode: Mode
-        iban: IBAN
-        bban: RIB
-        iban_label: IBAN
-        iban_label2: IBAN
-        bic: BIC
-        account_id: Compte comptable référencé
-        currency_id: Devise utilisée
-        journal_id: Journal utilisé
-        bban_unvalid_key: 'La clé du BBAN n''est pas correcte.'
-      bank_account_statement:
-        bank_account_id: Compte bancaire utilisé
-        number: Numéro du relevé de compte
-        credit: Crédit
-        debit: Débit
-        started_on: Du
-        stopped_on: Au
-      company:
-        bank_journal: Journal de banque
-        born_on: Créée le
-        code: Code interne
-        entity_id: Fiche relation
-        name: 'Nom' # (ou&nbsp;dénomination&nbsp;sociale)
-        purchases_journal: 'Journal d''achats'
-        sales: Ventes
-        sales_journal: Journal de Ventes
-        siren: Numéro SIREN
-      complement: 
-        choices_count: Nb. Choix
-        nature: Type de donnée
-        nature_label: Type de donnée
-        name: Nom
-        position: Position
-        required: Obligatoire
-        active: Actif
-        length_max: Nombre de caractères maximum
-        decimal_min: Intervalle bas
-        decimal_max: Intervalle haut
-      complement_choice:
-        name: Nom
-        value: Valeur
-      contact:
-        area_id: Zone
-        country: Pays
-        fax: Fax
-        mobile: Portable
-        name: Nom (interne)
-        phone: Téléphone
-        website: Site web
-        latitude: Latitude
-        longitude: Longitude
-        address: Adresse
-        active: Actif
-        default: Par défaut
-        closed_on: Annulé le
-        email: Email
-        nature: Type
-        line_2: Destinataire - Service
-        line_3: Bât. - Rés. - ZI...
-        line_4_number: Numéro de la voie
-        line_4_street: Libellé de la voie
-        line_5: Mention spéciale - Lieu dit
-        line_6_code: Code postal
-        line_6_city: Ville
-      delay:
-        active: Utilisable
-        comment: Commentaire
-        expression: Expression
-        name: Nom
-      delivery:
-        amount: Montant HT
-        amount_with_taxes: Montant TTC
-        contact_id: Adresse du client
-        delivered: Livré
-        delivered_on: Reçu le
-        invoice_id: Facture
-        label: Libellé
-        mode_id: Type
-        moved_on: Faite le
-        nature: Type
-        planned_on: Prévue le
-        quantity: Quantité
-        shipped_on: Envoyé le
-        text_nature: Type
-        type: Type
-      delivery_mode:
-        code: Code
-        comment: Commentaire
-        name: Nom
-      department:
-        name: Nom
-        comment: Commentaire
-      embankment: 
-        amount: Montant
-        bank_account_id: Compte bancaire
-        created_on: Crée le
-        mode_id: Type de paiement
-        payments_number: Nombre de chèque
-        validated: Valider
-      employee:
-        title: Fonction
-        first_name: Nom
-        last_name: Prénom
-        commercial: Activité commerciale        
-        profession_id: Profession
-        user_id: Utilisateur 
-        department_id: Département 
-        establishment_id: Etablissement
-      entity:
-        active: Actif
-        born_on: Date de naissance
-        category_id: Catégorie
-        client: Fiche client
-        code: Code
-        comment: Commentaire
-        country: Pays
-        created_on: Crée le
-        dead_on: Date de décès
-        deliveries_conditions: Conditions de Livraison
-        discount_rate: 'Taux d''escompte'
-        excise: 'Numéro d''accises'
-        first_met_on: Date de la première rencontre
-        first_name: Prénom
-        full_name: Nom complet
-        language_id: Langue
-        name: Nom
-        nature_id: Type
-        origin_id: Lieu de la première rencontre
-        employee_id: Représentant
-        payments_number: Nombre de paiements
-        proposer_id: Parrain
-        reduction_rate: Taux de réduction
-        reflation_submissive: Soumis à la relance
-        siren: Code SIREN
-        supplier: Fiche fournisseur
-        vat_number: Numéro de TVA intra-communautaire
-        vat_submissive: Soumis à la TVA
-        website: Site Web
-        client_account_id: Compte client associé
-        supplier_account_id: Compte fournisseur associé
-        client: Client
-        supplier: Fournisseur
-      entity_category:
-        default: Par défaut
-        description: Description
-        name: Nom
-      entity_meeting:
-        meeting_id: Lieu(x) de rencontre
-      entity_nature:
-        abbreviation: Abréviation
-        active: Actif
-        description: Description
-        in_name: Abréviation incluse dans le nom de la fiche
-        name: Nom (interne)
-        physical: Personne physique
-        title: Titre
-      entry:
-        name: Libellé
-        number_account: Nber        
-        record_id: Numéro
-        account_id: Compte
-        currency_debit: Débit
-        currency_credit: Crédit
-      establishment:
-        name: Nom
-        nic: NIC (Numéro Interne de Classement)
-        siret: N° SIRET
-        comment: Commentaire
-      financialyear:
-        id: Numéro
-        code: Code
-        closed: Clôturé        
-        started_on: Commencé le
-        stopped_on: Date de clôture
-        written_on: 'Autoriser l''écriture jusqu''au'
-      idea:
-        status: Statut
-        user_id: Utilisateur
-        description: Description
-        name: Titre
-        comment: Commentaire
-        where_id: Module
-        what_id: Caractéristique
-      invoice:
-        amount: Montant HT
-        amount_with_taxes: Montant TTC
-        client_id: Client
-        contact_id: Adresse
-        created_on: Créée le
-        credit: Avoir
-        number: Numéro 
-        origin_id: 'Facture d''origine'
-        payment_on: Règlé le
-        sale_order: Vente
-        sale_order_id: Vente
-      invoice_line:
-        amount: Montant HT
-        amount_with_taxes: Montant TTC
-        price_id: Prix HT
-        product_id: Produit
-        quantity: Quantité
-      journal:
-        closed_on: Date de clôture
-        code: Code
-        currency_id: Devise
-        id: Journal
-        name: Nom
-        nature: Nature
-      journal_record:
-        journal_id: Journal
-        financialyear_id: Exercice
-      meeting: 
-        address: Adresse
-        description: Description
-        employee_id: Commercial/Représentant
-        entity_id: Client
-        location_id: Lieu
-        mode_id: Type
-        taken_place_on: A eu lieu le
-      meeting_location: 
-        description: Description
-        name: Nom
-      meeting_mode:
-        name: Nom
-      payment: 
-        account_id: Compte associé 
-        account_number: Numéro de compte
-        amount: Montant
-        bank: Banque
-        check_number: Numéro de chèque
-        embanker_id: Encaisseur
-        entity_id: Client
-        mode_id: Mode de paiement
-        paid_on: Réglé le 
-        to_bank_on: À encaisser le
-      payment_mode:
-        account_id: Compte associé
-        mode: Mode
-        name: Nom 
-      payment_part:
-        amount: Montant attribué à la vente
-        payment_way: Moyen de paiement
-      price:
-        amount: Montant HT
-        amount_with_taxes: Montant TTC
-        category_id: Catégorie de fiche associée
-        currency_id: Devise
-        default: Par défaut
-        entity_id: Fournisseur
-        id: Produit
-        list_id: Liste de prix
-        price: Prix
-        product_id: Produit
-        quantity_min: 'Quantité minimale'
-        quantity_max: 'Quantité maximale'
-        range: Intervalle
-        tax_id: Taxe
-        use_range: Définir un intervalle de quantité pour le produit
-      price_list:
-        active: Active (utilisable)
-        comment: Commentaire
-        currency_id: Devise
-        name: Nom
-      product:
-        active: Utilisable
-        actual_number: Numéro en cours
-        catalog_name: Nom pour le catalogue
-        catalog_description: Description pour le catalogue
-        charge_account_id: Compte comptable de charges
-        code: Code
-        code2: Code secondaire
-        comment: Commentaire
-        critic_quantity_min: Quantité minimum critique
-        description: Description
-        duration: 'Nombre de numéros OU période d''abonnement'
-        ean13: Code EAN13
-        manage_stocks: Gérer les stocks
-        name: Nom
-        nature: Nature
-        number: Numéro
-        price: Prix de revient
-        product_account_id: Compte comptable de produits
-        quantity_min: Quantité minimum
-        quantity_max: Quantité maximum
-        service_coeff: Coefficient (de quantité) de service
-        shelf_id: Catégorie
-        subscription_nature_id: Type
-        subscription_numbers: Nombre de numéros
-        subscription_period: Période
-        supply_method: 'Moyen d''approvisionnement'
-        to: Pour
-        to_sale: Produit destiné à la vente
-        to_purchase: 'Produit destiné à l''achat'
-        to_rent: Produit destiné à la location
-        unit_id: Unité de mesure
-        weight: Poids (kg)
-        without_stocks: Ne nécessite pas de gestion de stocks
-      product_component:
-        component_id: Produit contenu
-        location_id: Lieu de stockage
-        name: Nom
-        quantity: Quantité
-      product_stock: 
-        critic_quantity_min: Quantité minimum critique
-        current_real_quantity: Stock réel
-        current_virtual_quantity: Stock virtuel
-        location_id: Pour le lieu de stockage
-        product_id: Produit
-        quantity_max: Quantité maximum
-        quantity_min: Quantité minimum
-      production: 
-        location_id: Lieu de stockage
-        moved_on: Fait le
-        product_id: Produit
-        quantity: Quantité
-      profession:
-        name: 'Nom'
-        code: 'Code'
-        rome: 'Code ROME'
-        commercial: 'Activité commerciale'
-      purchase_order:
-        amount: Montant HT
-        amount_with_taxes: Montant TTC
-        client_id: Fournisseur
-        supplier_id: Fournisseur
-        dest_contact_id: Adresse de livraison
-        shipped: Expédié
-        invoiced: Facturé
-        label: Commande
-        number: Numéro
-        comment: Commentaire
-        planned_on: Réception prévue le
-        quantity: Quantité
-        received: Reçue
-      purchase_order_line: 
-        amount: Montant HT
-        amount_with_taxes: Montant TTC
-        location_id: Lieu de stockage
-        price_id: Produit
-        product_id: Produit
-        quantity: Quantité
-        unit_id: Unités
-      role:
-        name: Nom
-        diff_less: Droits enlevés
-        diff_more: Droits rajoutés
-      rubric:
-        name: Titre
-        nature: Where - What
-        description: Description
-      sale_order:
-        amount: Montant HT
-        amount_with_taxes: Montant TTC
-        client_id: Client
-        confirmed_on: Confirmée le
-        created_on: Crée le
-        nature: Nature
-        nature_id: Nature
-        number: Numéro
-        payment_delay_id: Délai de paiement
-        state: État
-        contact_id: Adresse pour le devis
-        invoice_contact_id:  Adresse pour la facture
-        delivery_contact_id: Adresse pour la livraison
-        expiration_id: 'Délai d''expiration du devis'
-        expired_on: Expiré le
-        has_downpayment: 'Acompte à verser'
-        downpayment_amount: 'Montant de l''acompte'
-        comment: Commentaire
-        sale: Vente
-        subject: Objet
-        text_state: État
-        function_title: Civilités
-        introduction: Introduction
-        conclusion: Conclusion
-      sale_order_nature:
-        active: Actif
-        comment: Commentaire
-        downpayment: Avec acompte
-        downpayment_minimum: Somme minimale
-        downpayment_rate: Taux acompte
-        expiration_id: "Délai d'expiration du devis"
-        name: Nom
-        payment_delay_id: "Délai de paiement"
-      sale_order_line:
-        amount: Montant HT
-        amount_with_taxes: Montant TTC
-        location_id: Lieu de stockage
-        product_id: Produit
-        price_amount: Montant HT
-        price_id: Produit tarifé
-        price_list_id: Tarif
-        quantity: Quantité
-        tax_id: Taxe
-        undelivered_quantity: Reste à livrer
-        unit_id: Unité
-      sequence:
-        name: Nom
-        compute: Dernière valeur
-        format: Format
-        last_number: 'Dernier numéro'
-        number_increment: Incrément
-        number_start: 'Début de la numération'
-        period: Périodicité
-        period_name: Périodicité
-      shape:
-        description: Description
-        master: Îlot maître
-        name: Nom
-        polygon: Coordonnées
-        shape_id: Îlot maître
-      shape_operation: 
-        description: Description    
-        employee_id: Employé
-        moved_on: Fait le
-        name: Nom
-        nature_id: Type 
-        planned_on: Prévu le
-        shape_id: Îlot
-        validated: Effectué
-      shape_operation_nature:
-        name: Nom
-        description: Description
-      shelf:
-        catalog_name: Nom pour le catalogue
-        catalog_description: Description
-        comment: Commentaire
-        name: Nom
-        parent: Sur-catégorie
-        parent_id: Sur-catégorie
-      stock_location:
-        account_id: Compte comptable
-        comment: Commentaire
-        contact_id: Adresse
-        establishment_id: Établissement
-        name: Nom
-        number: Numéro
-        parent_id: Lieu de stockage parent
-        product_id: Produit contenu
-        quantity_max: Quantité maximum
-        x: Position X
-        y: Position Y
-        z: Position Z
-      stock_move:
-        name: Nom
-        planned_on: Prévu le
-        input: Entrée
-        moved_on: Fait le
-        quantity: Quantité
-        unit_id: Unité
-        product_id: Produit
-        comment: Commentaire
-        location_id: Lieu de stockage
-        virtual: Virtuel
-      stock_transfer:
-        comment: Commentaire
-        executed: Réalisé
-        location_id: Sortie du lieu de stockage
-        moved_on: Fait le
-        nature: Type
-        planned_on: Prévu le
-        product_id: Produit
-        quantity: Quantité
-        second_location_id: Entrée du lieu de stockage
-        text_nature: Type
-      subscription: 
-        beginning: Débute le
-        contact_id: 'Adresse de l''abonné'
-        entity_name: Abonné
-        first_number: Premier numéro
-        finish: Termine le
-        finished_on: Termine le
-        last_number: Dernier numéro
-        nature_id: Type
-        product_id: Produit
-        started_on: Débute le
-      subscription_nature:
-        actual_number: Numéro en cours
-        comment: Commentaire
-        id: Type
-        name: Nom
-        nature: Type
-        read_nature: Type
-      tax:
-        amount: Valeur
-        group_name: Groupe
-        included: Incluse
-        name: Nom
-        nature: Nature
-        reductible: Réductible
-      user:
-        admin: Administrateur
-        credits: 'Création d''avoirs'
-        email: 'E-mail'
-        first_name: 'Prénom'
-        free_price: Prix libres
-        full_name: 'Nom complet'
-        language_id: 'Langue'
-        last_name: 'Nom'
-        locked: 'Compte verrouillé'
-        name: 'Nom d''utilisateur'
-        password: 'Mot de passe'
-        password_confirmation: 'Confirmation du mot de passe'
-        reduction_percent: Taux de réduction autorisé (%)
-        role_id: À partir du rôle
-      version:
-        number: Numéro
-        last: Derniere version ?
-        description: Description  
-
   # You can use the app section freely to localize you application with the
   # localized_application feature. The entries defined here are accesable by the
   # global method "l". See the RDoc for details.
@@ -806,18 +253,18 @@ fr-FR:
         register: 'Créer une nouvelle société'
       register:
         administrator: Administrateur
-        title: 'Enregistrer sa société'
         company_name: Nom de votre société
-        my_company: Saisissez les informations sur votre société
-        my_self: Saisissez les informations vous concernant
         company_name_example: SARL Martin et Fils
         company_siren_example: 012345678
-        user_last_name_example: MARTIN
+        my_company: Saisissez les informations sur votre société
+        my_self: Saisissez les informations vous concernant
+        title: 'Enregistrer sa société'
         user_first_name_example: Jean
+        user_last_name_example: MARTIN
         user_name_example: martinj
         user_name_info: 'C''est le nom que vous utiliserez pour rentrer dans Ekylibre'
-        user_password_hint: 'Pour avoir mot de passe "solide", il faut utiliser au minimum des majuscules, des minuscules et des chiffres'
         user_password_confirmation_info: 'Vous devez ressaisir votre mot de passe pour éviter qu''un mot de passe érroné soit enregistré'
+        user_password_hint: 'Pour avoir mot de passe "solide", il faut utiliser au minimum des majuscules, des minuscules et des chiffres'
 
     # Company
     company:
@@ -890,7 +337,14 @@ fr-FR:
         tools: 'Outils'
         users: 'Utilisateurs'
       listings:
+        listings_create: 'Créer une nouvelle extraction'
         title: 'Extractions de données'
+      _listings_form:
+        subtitle: 'Renseignez les informations concernant l''extraction'
+      listings_create:
+        title: 'Création d''une nouvelle extraction'
+      listings_update:
+        title: 'Modification de l''extraction {{value}}'
       restore:
         backup: Effectuer une copie de sauvegarde
         download: Sélectionner le fichier de sauvegarde à télécharger
