git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@958 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.application.yml
+++ b/config/locales/fr-FR.pack.application.yml
@@ -9,6 +9,8 @@ fr-FR:
   helpers:
     application:
       exit: 'Se déconnecter'
+      false: 'non'
+      true: 'oui'
 
   views:
     application:
