--- a/config/locales/fr-FR.pack.relations.yml
+++ b/config/locales/fr-FR.pack.relations.yml
@@ -35,6 +35,10 @@ fr-FR:
 
   views:
     relations:
+      cities_create:
+        title: 'Ajouter une ville'
+      cities_update:
+        title: 'Modification de la ville {{value}}' 
       complement_choices:
         complement_choices_create: 'Ajouter un nouveau choix à la liste'
         complement_choices_sort: 'Trier les choix par nom'
@@ -61,12 +65,22 @@ fr-FR:
         address: 'Adresse'
         canals: 'Coordonnées'
       districts:
-        districts_create: 'Ajouter une zone'
+        cities:
+          one: '1 ville enregistrée'
+          other: '{{count}} villes enregistrées'
+          zero: 'Aucune ville enregistrée'
+        city_name: 'Ville'
+        districts:
+          one: '1 district enregistré'
+          other: '{{count}} districts enregistrés'
+          zero: 'Aucun district enregistré'
+        cities_create: 'Ajouter une ville' 
+        districts_create: 'Ajouter un district'
         title: 'Districts'
       districts_create:
-        title: 'Ajouter une zone'
+        title: 'Ajouter un district'
       districts_update:
-        title: 'Modification de la zone avec {{value}}'
+        title: 'Modification du district avec {{value}}'
       entities:
         entities_create: 'Créer une nouvelle fiche'
         entities_export: 'Tout exporter au format CSV'
