--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -70,7 +70,7 @@ fr-FR:
       meeting: 'Rencontre'
       meeting_location: 'Lieu de rencontre'
       meeting_mode: 'Mode de rencontre'
-      observation: (((OBSERVATION)))
+      observation: 'Observation'
       parameter: 'Paramètre'
       payment: 'Réglement'
       payment_mode: 'Mode de réglement'
@@ -114,7 +114,7 @@ fr-FR:
         created_at: 'Créé le'
         creator_id: 'Créateur'
         deleted: 'Effacé'
-        groupable: 'Groupable'
+        groupable: (((GROUPABLE)))
         id: 'ID'
         is_debit: (((IS_DEBIT)))
         keep_entries: (((KEEP_ENTRIES)))
@@ -194,8 +194,8 @@ fr-FR:
         creator_id: 'Créateur'
         id: 'ID'
         lock_version: 'Version'
-        name: 'Nom'
-        postcode: 'Code postal'
+        name: (((NAME)))
+        postcode: (((POSTCODE)))
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
@@ -247,13 +247,10 @@ fr-FR:
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
-      # (((CITY)))
+      # City
       city:
         company_id: 'Société'
         created_at: 'Créé le'
-        created_by: '(((CREATED_BY)))'
-        creator_id: 'Créateur'
-        district_id: (((DISTRICT_ID)))
         created_by: '(((CREATED_BY)))'
         creator_id: 'Créateur'
         district_id: 'District'
@@ -488,7 +485,7 @@ fr-FR:
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
-      # (((DISTRICT)))
+      # District
       district:
         company_id: 'Société'
         created_at: 'Créé le'
