--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -255,6 +255,11 @@ fr-FR:
       error_closed_journal: 'Le journal est clôturé donc vous ne pouvez plus créer, modifier  ou supprimer de pièces.' 
       error_limited_financialyear: 'L''ajout de pièce est limité à une année financière donnée.'
       error_limited_period: 'L''ajout de pièce est limité à une période donnée.'
+    observation:
+      importances:
+        important: Importante
+        normal: Normale
+        notice: Faible
     payment_mode:
       modes:
         check: Chèque
