git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@965 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -911,7 +911,7 @@ fr-FR:
         updated_at: 'Mis à jour le'
         updater_id: 'Modificateur'
 
-      # (((OBSERVATION)))
+      # Observation
       observation:
         company_id: 'Société'
         created_at: 'Créé le'
